# CroX

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: build.yml
backend/: CMakeLists.txt
backend/include/inputflow/app/: inputflow_app.hpp  inputflow_engine.hpp
backend/include/inputflow/config/: config_manager.hpp  json_mapping_parser.hpp  json_profile_parser.hpp  mapping_combo.hpp  mapping_validator.hpp  profile_manifest.hpp
backend/include/inputflow/core/: debounce_filter.hpp  execution_state.hpp  i_event_bus.hpp  key_release_guard.hpp
backend/include/inputflow/input/: i_input_provider.hpp
backend/include/inputflow/joystick/: i_joystick_provider.hpp  joystick_mapping_engine.hpp
backend/include/inputflow/keyboard/: i_keyboard_hook.hpp  keyboard_hook_service.hpp  keyboard_listener.hpp
backend/include/inputflow/macro/: macro_engine.hpp  macro_task_queue.hpp
backend/include/inputflow/remap/: key_remapper.hpp
backend/include/inputflow/util/: key_code_table.hpp
backend/src/app/: inputflow_app.cpp  inputflow_app_profiles.cpp  inputflow_engine.cpp
backend/src/config/: config_manager.cpp  json_mapping_parser.cpp  json_profile_parser.cpp  mapping_combo.cpp  mapping_validator.cpp  profile_manifest.cpp
backend/src/core/: debounce_filter.cpp  event_bus.cpp  execution_state.cpp  key_release_guard.cpp
backend/src/input/: input_provider_factory.cpp
backend/src/joystick/: joystick_mapping_engine.cpp  joystick_provider_factory.cpp
backend/src/keyboard/: keyboard_hook_service.cpp  keyboard_listener.cpp
backend/src/macro/: macro_engine.cpp  macro_task_queue.cpp
backend/src/platform/: platform_detect.cpp
backend/src/platform/mac/: input_provider_mac.mm  joystick_hid_exclusive_mac.mm  joystick_provider_mac.mm  keyboard_hook_mac.mm
backend/src/platform/win/: input_provider_win.cpp  joystick_provider_win.cpp  keyboard_hook_win.cpp
backend/src/remap/: key_remapper.cpp
backend/src/util/: key_code_table.cpp
configs/: default.json
docs/: INSTALL-id.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/main/: index.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.tsx
frontend/src/renderer/src/components/: ActivityConsole.css  AppHeader.css  AppHeader.tsx  ConfigTransfer.css  ConfigTransfer.tsx  ControllerPanel.css  ControllerPanel.tsx  JoystickCaptureOverlay.css  JoystickCaptureOverlay.tsx  LiveInputMonitor.css  LiveInputMonitor.tsx  MacroEditor.css  MappingEditor.css  MappingEditor.tsx  ProfileManager.css  ProfileManager.tsx  Sidebar.css  StatusBar.css  StatusBar.tsx
frontend/src/renderer/src/hooks/: useGamepadLiveState.ts  useJoystickCapture.ts
frontend/src/renderer/src/styles/: app.css  global.css
frontend/src/renderer/src/types/: inputflow.d.ts  mapping.ts
frontend/src/renderer/src/utils/: buttonColors.ts  configTransfer.ts  gamepad.ts
native/: CMakeLists.txt  binding.gyp  package-lock.json  package.json
native/..build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
native/..build/backend/: Makefile  cmake_install.cmake
native/..build/native/: Makefile  cmake_install.cmake
native/src/: bridge.cpp  engine_wrapper.cpp  engine_wrapper.hpp  win_delay_load_hook.cc
scripts/: build-mac-app.sh  install-mac-app.sh
shared/include/inputflow/: i_hid_provider.hpp  types.hpp
shared/include/inputflow/util/: special_keys.hpp
shared/schemas/: profile.schema.json
